--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn sql_app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - ./:/code
     ports:
